# webcrawler

./: .gitignore  README.md  gui.py  guideline.md  main.py  pyproject.toml
webcrawl/: __init__.py  config.py  main_window.py  utils.py  worker.py
